--- a/src/app/citas/citas.component.html
+++ b/src/app/citas/citas.component.html
@@ -48,5 +48,13 @@
                 </tr>
             </tbody>
         </table>
+        <mat-paginator [length]="totalRegistros"
+              [pageSize]="totalPorPagina"
+              [pageIndex]="paginaActual"
+              [pageSizeOptions]="opcionTamanoPagina"
+              (page)="paginar($event)"
+              showFirstLastButtons
+              class="float-left mx-2">
+        </mat-paginator>
     </div>
 </div>
