--- a/src/app/citas/citas.component.html
+++ b/src/app/citas/citas.component.html
@@ -4,6 +4,17 @@
         <div class="my-2 d-flex justify-content-between p-2 form-inline">
             <button type="button" class="btn btn-info" [routerLink]="['/citas/cita-form']">Agendar cita</button>
         </div>
+        <div class="form-group col-md-6">
+            <label class="control-label">Busqueda por fecha:</label>
+            <div class="form-group">
+              <div class="input-group mb-3">
+                <input type="date" class="form-control col-md-5" [(ngModel)]="dia">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarFecha()">Buscar</button>
+                </div>
+              </div>
+            </div>
+        </div>
         <table class="table table-sm table-striped table-hover" matSort (matSortChange)="sortData($event)">
             <thead>
                 <tr>
