--- a/src/app/citas/citas.component.html
+++ b/src/app/citas/citas.component.html
@@ -5,7 +5,7 @@
             <button type="button" class="btn btn-info" [routerLink]="['/citas/cita-form']">Agendar cita</button>
         </div>
         <div class="form-group col-md-6">
-            <label class="control-label">Busqueda por fecha:</label>
+            <label class="control-label text-muted">Busqueda por fecha:</label>
             <div class="form-group">
               <div class="input-group mb-3">
                 <input type="date" class="form-control col-md-5" [(ngModel)]="dia">
